bad/class_void_field.example_compiler_output
ERROR
[1mbad/class_void_field.lat:3:5: [1;31merror: [0;1mfield cannot have type: void[m
    void foo;
    [1;32m^[m
